Forgot that main page is html file

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 ---
-title: Live A Hero Fan Wiki
+title: Live A Hero Wiki
 banner: true
 ---
 
 Useful links (will be updated later)
 
-- LAH website: https://live-a-hero.jp/
-- LAH jp twitter: https://twitter.com/lah_lw
-- LAH en twitter (unofficial): https://twitter.com/LAH_ENG
-- App Store/Google Play link: game not released yet :pensive: 
-- Character tier maker https://tiermaker.com/create/live-a-hero-characters-585406
+<ul>
+<li>LAH website: <a href="https://live-a-hero.jp/">here</a></li>
+<li>LAH jp twitter: <a href="https://twitter.com/lah_lw">here</a></li>
+<li>LAH en twitter (unofficial): <a href="https://twitter.com/LAH_ENG">here</a></li>
+<li>App Store/Google Play link: game not released yet :pensive: </li>
+<li>Character tier maker <a href="https://tiermaker.com/create/live-a-hero-characters-585406">here</a></li>
+</ul>
