--- a/test.html
+++ b/test.html
@@ -2,4 +2,6 @@
 title: test
 ---
 
-{% include hero-infobox2.html %}
+{% include hero-infobox2.html stockId=10011 %}
+
+{% include hero-infobox2.html stockId=10091 %}
