--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ Useful links (will be updated later)
 <li>LAH website: <a href="https://live-a-hero.jp/">here</a></li>
 <li>LAH jp twitter: <a href="https://twitter.com/lah_lw">here</a></li>
 <li>LAH en twitter (unofficial): <a href="https://twitter.com/LAH_ENG">here</a></li>
-<li>App Store/Google Play link: game not released yet</li>
+<li>App Store/Google Play link: <a href="https://play.google.com/store/apps/details?id=jp.co.lifewonders.liveahero">here</a></li>
 <li>Character tier maker <a href="https://tiermaker.com/create/live-a-hero-characters-585406">here</a></li>
 </ul>
