--- a/test.html
+++ b/test.html
@@ -4,4 +4,8 @@ title: test
 
 {% include hero-infobox2.html stockId=10011 %}
 
+{% include sidekick-infobox.html stockId=10011 %}
+
 {% include hero-infobox2.html stockId=10091 %}
+
+{% include sidekick-infobox.html stockId=10091 %}
