Mass rename heroes to charas

--- a/charas.html
+++ b/charas.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-permalink: /heroes/
+permalink: /charas/
 ---
 
 <ul>
-{% for hero in site.heroes %}
+{% for hero in site.charas %}
   <li>
       <a href="{{ hero.url }}">{{ hero.name }}</a>
   </li>
