--- a/charas.html
+++ b/charas.html
@@ -7,16 +7,42 @@ permalink: /charas/
 
 <h2>Released units</h2>
 
-{% assign heroes = site.charas | where: "unreleased", false %}
-<ul>
-{% for hero in heroes %}
-  <li>
-      <a href="{{ hero.url }}">{{ hero.name }}</a>
-  </li>
+<h3 id="heroes">Heroes</h3>
+
+{% assign cardInfos = site.data.CardMaster | where: "stockOrder", 1 %}
+<ul class="card-list clearfix">
+{% for c in cardInfos %}
+<li>
+<div class="hero-icon">
+  <div class="border hero-{{ c.rarity }}"></div>
+  <img class="hero-chara-icon" src="/assets/img/icon/icon_{{ c.resourceName }}_h01.png" loading="lazy">
+</div>
+  {% capture page_cond %}item.path == "_charas/{{ c.resourceName }}.md"{% endcapture %}
+  {% assign page = site.charas | where_exp: "item", page_cond | first %}
+  <a href="{{ page.url }}">{{ page.name }}</a></li>
 {% endfor %}
 </ul>
 
-<h2>Unreleased units</h2>
+<h3 id="sidekicks">Sidekicks</h3>
+
+{% assign cardInfos = site.data.SidekickMaster | where: "levelZone", 1 %}
+<ul class="card-list clearfix">
+{% for c in cardInfos %}
+<li>
+<div class="sidekick-icon sidekick-{{ c.rarity }}">
+  {% if c.resourceName == "player" %}
+  <img src="/assets/img/icon/icon_player_s01.gif">
+  {% else %}
+  <img src="/assets/img/icon/icon_{{ c.resourceName }}_s01.png">
+  {% endif %}
+</div>
+  {% capture page_cond %}item.path == "_charas/{{ c.resourceName }}.md"{% endcapture %}
+  {% assign page = site.charas | where_exp: "item", page_cond | first %}
+  <a href="{{ page.url }}">{{ page.name }}</a></li>
+{% endfor %}
+</ul>
+
+<h2 id="unreleased">Unreleased units</h2>
 
 {% assign unreleased = site.charas | where: "unreleased", true %}
 <ul>
