--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@ title: Live A Hero Wiki
 banner: true
 ---
 
-Useful links (will be updated later)
+<img src="/assets/img/lah_banner.png" align="center" alt="Live A Hero banner">
 
-<ul>
-<li>LAH website: <a href="https://live-a-hero.jp/">here</a></li>
-<li>LAH jp twitter: <a href="https://twitter.com/lah_lw">here</a></li>
-<li>LAH en twitter (unofficial): <a href="https://twitter.com/LAH_ENG">here</a></li>
-<li>App Store/Google Play link: <a href="https://play.google.com/store/apps/details?id=jp.co.lifewonders.liveahero">here</a></li>
-<li>Character tier maker <a href="https://tiermaker.com/create/live-a-hero-characters-585406">here</a></li>
-</ul>
+<p style="text-align: center"><a href="https://live-a-hero.jp/">Official Website</a> ★ <a href="https://twitter.com/lah_lw">Official Japanese Twitter</a> ★ <a href="https://twitter.com/LAH_ENG">Unofficial English Twitter</a>
+<br><a href="https://play.google.com/store/apps/details?id=jp.co.lifewonders.liveahero">Download on Google Play</a> ★ <a href="https://apps.apple.com/jp/app/id1474209512">Download on the Apple App Store</a> ★ <a href="https://tiermaker.com/create/live-a-hero-characters-585406">Character Tier Maker</a></p>
+
+<p style="text-align: justify">Live A Hero (LAH) is a turn-based mobile RPG developed by Lifewonders.</p>
