--- a/charas.html
+++ b/charas.html
@@ -68,7 +68,7 @@ permalink: /charas/
 
 <script>
 function sortList(list, column, btn) {
-  const oldOrder = parseInt(btn.dataset.order || '1', 10);
+  const oldOrder = parseInt(btn.dataset.order || '-1', 10);
   const newOrder = 0 - oldOrder;
   btn.dataset.order = newOrder;
 
@@ -85,10 +85,15 @@ function sortList(list, column, btn) {
     list.appendChild(x.element);
   }
 }
-document.querySelectorAll(".chara-sort").forEach(e => {
-  const list = document.querySelector(e.dataset.list);
-  for (const btn of e.children) {
+document.querySelectorAll(".chara-sort").forEach(ele => {
+  const list = document.querySelector(ele.dataset.list);
+  for (const btn of ele.children) {
     btn.addEventListener("click", () => sortList(list, btn.dataset.sort, btn));
   }
+  ele.addEventListener("click", (e) => {
+    for (const btn of ele.children) {
+      if (e.target.dataset.sort !== btn.dataset.sort) btn.dataset.order = "-1";
+    }
+  });
 });
 </script>
