Fix chara page bug

--- a/charas.html
+++ b/charas.html
@@ -61,7 +61,7 @@ permalink: /charas/
 <ul>
 {% for chara in unreleased %}
   <li>
-      <a href="{{ chara.url }}">{{ chara.name }}</a>
+      <a href="{{ chara.url }}">{{ chara.title }}</a>
   </li>
 {% endfor %}
 </ul>
