--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@ banner: true
 
 <img src="/assets/img/lah_banner.png" style="margin-bottom: 30px" align="center" alt="Live A Hero banner">
 
-<!-- TODO: add template for current event -->
 <table class="event-infobox">
 <tr><th><a href="/events/">Current Event</a></th></tr>
 {% assign event = site.events | sort: "event_start_time" | last %}
+{% assign current_date = site.time | date: "%s" | plus: 0 %}
+{% for event in site.events reversed %}
+{% assign event_date = event.event_end_time | date: "%s" | plus: 0 %}
+{% if event_date < current_date %}{% break %}{% endif %}
 <tr><td data-expiry="{{ event.event_end_time }}"><a href="{{ event.url }}">{{ event.title }}</a> ({{ event.event_start_time | date: "%-d %b %Y" }} ~ {{ event.event_end_time | date: "%-d %b %Y" }})</td></tr>
+{% endfor %}
 </table>
 
 <p style="text-align: justify">Live A Hero (LAH) is a turn-based mobile RPG developed by Lifewonders.</p>
