Optimize finding page by resourceName

--- a/charas.html
+++ b/charas.html
@@ -20,8 +20,7 @@ redirect_from: /heroes/
 {% assign cardInfos = site.data.CardMaster | where: "stockOrder", 1 %}
 <ul id="hero-list" class="card-list clearfix">
 {% for c in cardInfos %}
-{% capture page_cond %}item.path == "_charas/{{ c.resourceName }}.md"{% endcapture %}
-{% assign page = site.charas | find_exp: "item", page_cond %}
+{% assign page = c.resourceName | resourceNameToPage %}
 <li data-id="{{ c.stockId }}" data-rarity="{{ c.rarity }}" data-element="{{ c.element }}" data-name="{{ page.title }}">
 <div class="hero-icon">
   <div class="border hero-{{ c.rarity }}"></div>
@@ -42,8 +41,7 @@ redirect_from: /heroes/
 {% assign cardInfos = site.data.SidekickMaster | where: "levelZone", 1 %}
 <ul id="sidekick-list" class="card-list clearfix">
 {% for c in cardInfos %}
-{% capture page_cond %}item.path == "_charas/{{ c.resourceName }}.md"{% endcapture %}
-{% assign page = site.charas | find_exp: "item", page_cond %}
+{% assign page = c.resourceName | resourceNameToPage %}
 <li data-id="{{ c.stockId }}" data-rarity="{{ c.rarity }}" data-name="{{ page.title }}">
 <div class="sidekick-icon sidekick-{{ c.rarity }}">
   <img src="/assets/img/icon/icon_{{ c.resourceName }}_s01.png">
