--- a/charas.html
+++ b/charas.html
@@ -23,7 +23,7 @@ redirect_from: /heroes/
 {% assign page = c.resourceName | resourceNameToPage %}
 <li data-id="{{ c.stockId }}" data-rarity="{{ c.rarity }}" data-element="{{ c.element }}" data-name="{{ page.title }}">
 <div class="hero-icon">
-  <div class="border hero-{{ c.rarity }}"></div>
+  <div class="chara-border hero-{{ c.rarity }}"></div>
   <img class="hero-chara-icon" src="/assets/img/icon/icon_{{ c.resourceName }}_h01.png" loading="lazy">
 </div>
   <a href="{{ page.url }}#h{{ c.stockId }}">{{ page.title }}</a></li>
@@ -44,7 +44,8 @@ redirect_from: /heroes/
 {% assign page = c.resourceName | resourceNameToPage %}
 <li data-id="{{ c.stockId }}" data-rarity="{{ c.rarity }}" data-name="{{ page.title }}">
 <div class="sidekick-icon sidekick-{{ c.rarity }}">
-  <img src="/assets/img/icon/icon_{{ c.resourceName }}_s01.png">
+  <div class="chara-border sidekick-border-{{ c.rarity }}"></div>
+  <img class="sidekick-chara-icon" src="/assets/img/icon/icon_{{ c.resourceName }}_s01.png" loading="lazy">
 </div>
   <a href="{{ page.url }}#s{{ c.stockId }}">{{ page.title }}</a></li>
 {% endfor %}
