Add main quests
See https://liveahero-wiki.github.io/main_quests/

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@ banner: true
 
 <p>And you, through a strange turn of events, have been hired to support these very heroes. You shall become the source and beacon to provide power to the heroes by helping them to live stream their battles, by observing the infinite "possibilities" hidden deep within the people around you…</p>
 
+<p>&gt;&gt;&gt; <a href="/main_quests/">Main Quests</a></p>
+
 <h2>Community Links</h2>
 
 <ul>
