Smaller box header text

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ section h2 {
     margin: 0 0 10px;
     background: rgb(94 203 140);
     text-align: center;
+    font-size: 16px;
 }
 </style>
 
