Migrate icons to /cdn

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ function test() {
     for (const e of elements)
     for (const rank of ranks) {
         const img = new Image();
-        img.src = `/assets/img/icon/item_rank${rank}_${e}.png`;
+        img.src = `/cdn/Sprite/item_rank${rank}_${e}.png`;
         dailyBox.appendChild(img);
     }
 }
