--- a/misc/stats_rank.html
+++ b/misc/stats_rank.html
@@ -13,7 +13,7 @@ banner: true
 {% assign page = c.resourceName | resourceNameToPage %}
 {% assign g = c.growths[3] %}
 <tr>
-<td><a class="item" href="{{ page.url }}"><img src="/cdn/Sprite/icon_{{ c.resourceName }}_h02.png" loading="lazy"> {{ page.title }}</a></td>
+<td><a class="item" href="{{ page.url }}/#h{{ c.stockId }}-stats"><img src="/cdn/Sprite/icon_{{ c.resourceName }}_h02.png" loading="lazy"> {{ page.title }}</a></td>
 <td>{{ g.hp }}</td><td>{{ g.attack }}</td><td>{{ g.addView }}</td><td>{{ g.agility }}</td>
 </tr>
 {% endfor %}
