Fix events in homepage

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@ section h2 {
 {% assign current_date = site.time | date: "%s" | plus: 0 %}
 {% for event in site.events reversed %}
 {% assign event_date = event.event_end_time | date: "%s" | plus: 0 %}
-{% if event_date < current_date %}{% break %}{% endif %}
+{% if event_date >= current_date %}
 <tr><td><img width="600" height="191" style="width: 100%" src="/cdn/Sprite/{{ event.banner_image }}" loading="lazy"></td></tr>
 <tr><td data-expiry="{{ event.event_end_time }}"><a href="{{ event.url }}">{{ event.title }}</a> ({{ event.event_start_time | date: "%-d %b %Y" }} ~ {{ event.event_end_time | date: "%-d %b %Y" }})</td></tr>
+{% endif %}
 {% endfor %}
 </table>
 
