--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@ section h2 {
 <li><a href="https://www.reddit.com/r/LiveAHero/">LAH Subreddit</a></li>
 <li><a href="https://discord.gg/zpc7PCk">LAH Discord (Herocord)</a></li>
 <li><a href="https://tiermaker.com/create/live-a-hero-characters-585406">Character Tier Maker</a></li>
+<li><a href="https://housamosummaries.blogspot.com/">Fan Translation Summaries</a></li>
 </ul>
 </section>
 
