Implement timed_bomb

--- a/events.html
+++ b/events.html
@@ -4,10 +4,13 @@ banner: true
 ---
 
 {% assign eventsByYear  = site.events | group_by_exp: "event", "event.event_start_time | date: '%Y'" %}
+{% assign current_date = site.time | date: "%s" | plus: 0 %}
 {% for year in eventsByYear reversed %}
 <h2 id="{{ year.name }}">{{ year.name }}</h2>
 <ul>
   {% for event in year.items reversed %}
+  {% assign event_start_date = event.event_end_time | date: "%s" | plus: 0 %}
+  {% if event.timed_bomb and event_start_date > current_date %}{% continue %}{% endif %}
   <li><a href="{{ event.url }}">{{ event.title }}</a> ({{ event.event_start_time | date: "%-d %b %Y" }} ~ {{ event.event_end_time | date: "%-d %b %Y" }})</li>
   {% endfor %}
 </ul>
