--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@ section h2 {
 {% assign current_date = site.time | date: "%s" | plus: 0 %}
 {% for event in site.events reversed %}
 {% assign event_date = event.event_end_time | date: "%s" | plus: 0 %}
+{% assign event_start_date = event.event_end_time | date: "%s" | plus: 0 %}
+{% if event.timed_bomb and event_start_date > current_date %}{% continue %}{% endif %}
 {% if event_date >= current_date %}
 <tr><td><img width="600" height="191" style="width: 100%" src="/cdn/Sprite/{{ event.banner_image }}" loading="lazy"></td></tr>
 <tr><td data-expiry="{{ event.event_end_time }}"><a href="{{ event.url }}">{{ event.title }}</a> ({{ event.event_start_time | date: "%-d %b %Y" }} ~ {{ event.event_end_time | date: "%-d %b %Y" }})</td></tr>
