Change LAH Tier Maker
TIL the old one was already dead

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ section h2 {
 <li><a href="https://liveahero-community.github.io/">LAH Chinese Database</a></li>
 <li><a href="https://www.reddit.com/r/LiveAHero/">LAH Subreddit</a></li>
 <li><a href="https://discord.gg/zpc7PCk">LAH Discord (Herocord)</a></li>
-<li><a href="https://tiermaker.com/create/live-a-hero-characters-585406">Character Tier Maker</a></li>
+<li><a href="https://rongjie-alter.github.io/lah-tiermaker/">Character Tier Maker</a></li>
 <li><a href="https://housamosummaries.blogspot.com/">Fan Translation Summaries</a></li>
 </ul>
 </section>
