--- a/affiliations.html
+++ b/affiliations.html
@@ -3,7 +3,7 @@ title: Affiliations
 banner: true
 ---
 
-{% assign heroes = site.data.CardMaster | where: "stockOrder", 1 %}
+{% assign heroes = site.data.CardMaster | where: "stockOrder", 1 | where_exp: "item", "item.stockId < 90000" %}
 {% assign sidekicks = site.data.SidekickMaster | where: "levelZone", 1 %}
 
 {% assign groups = heroes | concat: sidekicks | processCharaGroup: "affiliationOffice", site.data.wiki.Affiliation | sort: "en" %}
