--- a/voice_actors.html
+++ b/voice_actors.html
@@ -3,7 +3,7 @@ title: Voice Actor
 banner: true
 ---
 
-{% assign heroes = site.data.CardMaster | where: "stockOrder", 1 %}
+{% assign heroes = site.data.CardMaster | where: "stockOrder", 1 | where_exp: "item", "item.stockId < 90000" %}
 {% assign sidekicks = site.data.SidekickMaster | where: "levelZone", 1 %}
 
 {% assign groups = heroes | concat: sidekicks | processCharaGroup: "characterVoice", site.data.wiki.VoiceActor | sort: "en" %}
